[package]
name = "rrefresh"
version = "0.1.0"
authors = ["ben <ben@thefarbeyond.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3.56"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
url = "2.2.2"
num_enum = "0.5.6"
async-std = "1.10.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window"
]
