[package]
name = "rrefresh"
version = "0.1.0"
authors = ["ben <ben@thefarbeyond.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
tokio = { version = "1.16.1", features = ["sync"] }
js-sys = "0.3.56"
web-sys = { version = "0.3.56", features = ["Storage", "console", "Window"]}
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
url = "2.2.2"
num_enum = "0.5.6"
